# little_RNN_restricted

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  little_rnn_env.yml  pyproject.toml  requirements.txt  setup.py
scripts/: bash_training.sh  main_rnn_training.py  plot_electrode.py  plot_on_roots.py
scripts/params_files/: constants_example.py
src/: utils.py
src/controller/: __init__.py  feature_selection.py  plot.py
src/data/: __init__.py  dataset.py  emg.py  plot_data.py  stim.py
src/rnn/: __init__.py  interpret.py  models.py  net_initialization.py  predict.py  save.py  train.py
src/tests/: plot_electrode.py  test_all_si.py
src/tests/params_files/: constants_example.py
